@@ -42,6 +42,7 @@
 	<event-file>@install.etc.dir@/events/Mylex.events.xml</event-file>
         <event-file>@install.etc.dir@/events/NetApp.events.xml</event-file>
         <event-file>@install.etc.dir@/events/Netbotz.events.xml</event-file>
+        <event-file>@install.etc.dir@/events/Netgear.events.xml</event-file>
         <event-file>@install.etc.dir@/events/Nokia.events.xml</event-file>
         <event-file>@install.etc.dir@/events/NORTEL.Contivity.events.xml</event-file>
         <event-file>@install.etc.dir@/events/Novell.events.xml</event-file>
